# os_info

./: .cspell.json  .editorconfig  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md  appveyor.yml  build.rs  cspell-dictionary.txt  deny.toml
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: bloat.yml  ci.yml  coverage.yml  release.yml  rust-version-linux.yml_  rust-version-macos.yml_  rust-version-windows.yml_  version.yml
_tests/: sw_vers_test.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
examples/: print_version.rs
os_info/: Cargo.toml
os_info/examples/: print_version.rs
os_info/src/: architecture.rs  bitness.rs  family.rs  info.rs  lib.rs  matcher.rs  os_type.rs  uname.rs  version.rs
os_info/src/aix/: mod.rs
os_info/src/android/: mod.rs
os_info/src/cygwin/: mod.rs
os_info/src/dflybsd/: mod.rs
os_info/src/dragonfly/: mod.rs
os_info/src/freebsd/: mod.rs
os_info/src/hurd/: mod.rs
os_info/src/illumos/: mod.rs
os_info/src/ios/: mod.rs
os_info/src/linux/: file_release.rs  lsb_release.rs  mod.rs
os_info/src/linux/tests/ALTLinux_p11/etc/: os-release
os_info/src/linux/tests/AOSCOS/etc/: os-release
os_info/src/linux/tests/AlmaLinux-9.0/etc/: os-release
os_info/src/linux/tests/Alpine/3.17.0/etc/: os-release
os_info/src/linux/tests/Artix/etc/: os-release
os_info/src/linux/tests/AzureLinux/etc/: os-release
os_info/src/linux/tests/AzureLinux_Unknown/etc/: os-release
os_info/src/linux/tests/Bazzite/etc/: os-release
os_info/src/linux/tests/Bluefin/etc/: os-release
os_info/src/linux/tests/CachyOS/etc/: os-release
os_info/src/linux/tests/CentOS/7.0.0/centos-release/etc/: centos-release
os_info/src/linux/tests/Debian/11.0.0/etc/: os-release
os_info/src/linux/tests/EndeavourOS/etc/: lsb-release
os_info/src/linux/tests/EndeavourOS/rolling/etc/: os-release
os_info/src/linux/tests/Fedora/35.0.0/workstation/fedora-release/etc/: fedora-release
os_info/src/linux/tests/Garuda/etc/: lsb-release  os-release
os_info/src/linux/tests/InstantOS/etc/: os-release
os_info/src/linux/tests/KDEneon/etc/: os-release
os_info/src/linux/tests/Kali_2023_2/etc/: os-release
os_info/src/linux/tests/ManjaroArm/etc/: os-release
os_info/src/linux/tests/Nobara/etc/: os-release
os_info/src/linux/tests/Parrot/etc/: os-release
os_info/src/linux/tests/PikaOS/etc/: os-release
os_info/src/linux/tests/Pop/22.4.0/etc/: lsb-release
os_info/src/linux/tests/RedHatEnterprise/7.9.0/server/etc/: redhat-release
os_info/src/linux/tests/RockyLinux-9.2/etc/: os-release
os_info/src/linux/tests/Solus/4.3.0/etc/: os-release  solus-release
os_info/src/linux/tests/Solus/etc/: lsb-release
os_info/src/linux/tests/Ultramarine/etc/: os-release
os_info/src/linux/tests/Uos/etc/: os-release
os_info/src/linux/tests/Void/etc/: os-release
os_info/src/linux/tests/none_no_release/etc/: README
os_info/src/linux/tests/openSUSE/15.1.0/etc/: os-release
os_info/src/linux/tests/openSUSE_Tumbleweed/etc/: os-release
os_info/src/macos/: mod.rs
os_info/src/netbsd/: mod.rs
os_info/src/openbsd/: mod.rs
os_info/src/redox/: mod.rs
os_info/src/windows/: mod.rs  winapi.rs
os_info/tests/: md_doc.rs
src/: bitness.rs  info.rs  lib.rs  lsb_release.rs  matcher.rs  os_info.rs  os_type.rs  rhel_release.rs  sw_vers.rs  utils.rs  version.rs  windows_ver.rs
src/android/: mod.rs
src/emscripten/: mod.rs
src/linux/: file_release.rs  file_release.rs.bk  lsb_release.rs  mod.rs  mod.rs.bk  rhel_release.rs
src/macos/: mod.rs
src/redox/: mod.rs
src/unknown/: mod.rs
src/windows/: mod.rs  version.rs  winapi.rs  windows_ver.rs
tests/: centos_release_test.rs  cli.rs  lsb_release_test.rs  sw_vers_test.rs  windows_ver_test.rs
