[package]
name = "os_info"
version = "0.7.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Stanislav Tkach <stanislav.tkach@gmail.com>"]
description = "Detect the operating system type and version."
documentation = "https://docs.rs/os_info"
homepage = "https://github.com/darkeld3r/os_info"
repository = "https://github.com/darkeld3r/os_info"
readme = "README.md"
keywords = ["os", "os_type", "os_version", "os_info"]
categories = ["os"]
license = "MIT"
build = "build.rs"

[badges]
appveyor = { repository = "DarkEld3r/os_info", service = "github" }
circle-ci = { repository = "DarkEld3r/os_info" }
travis-ci = { repository = "DarkEld3r/os_info" }
is-it-maintained-issue-resolution = { repository = "DarkEld3r/os_info" }
is-it-maintained-open-issues = { repository = "DarkEld3r/os_info" }

[dependencies]
log = "0.4.1"

[target.'cfg(not(windows))'.dependencies]
regex="0.2.10"

[target.'cfg(target_os = "macos")'.dependencies]
lazy_static = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"

[dev-dependencies]
itertools = "0.7.3"
pretty_assertions = "0.5.1"
