[package]
name = "os_info"
version = "2.0.2"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Stanislav Tkach <stanislav.tkach@gmail.com>"]
description = "Detect the operating system type and version."
documentation = "https://docs.rs/os_info"
homepage = "https://github.com/darkeld3r/os_info"
repository = "https://github.com/darkeld3r/os_info"
readme = "README.md"
keywords = ["os", "os_type", "os_version", "os_info"]
categories = ["os"]
license = "MIT"
edition = "2018"

[badges]
is-it-maintained-issue-resolution = { repository = "DarkEld3r/os_info" }
is-it-maintained-open-issues = { repository = "DarkEld3r/os_info" }

[features]
default = ["serde"]

[dependencies]
log = "0.4.5"
serde = { version = "1.0.0", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["minwindef", "ntdef", "ntstatus", "sysinfoapi", "winnt", "winuser", "libloaderapi", "processthreadsapi"] }

[dev-dependencies]
itertools = "0.9.0"
pretty_assertions = "0.6.1"
doc-comment = "0.3.1"
