[package]
name = "os_info_cli"
version = "2.0.0"
authors = ["Stanislav Tkach <stanislav.tkach@gmail.com>"]
description = "Detect the operating system type and version."
documentation = "https://docs.rs/os_info"
homepage = "https://github.com/stanislav-tkach/os_info"
repository = "https://github.com/stanislav-tkach/os_info"
readme = "README.md"
keywords = ["cli", "os", "os_type", "os_version", "os_info"]
categories = ["command-line-interface", "os"]
license = "MIT"
edition = "2018"
rust-version = "1.76"

[[bin]]
name = "os_info"
path = "src/main.rs"

[dependencies]
os_info = { version = "3.7.0", default-features = false, path = "../os_info" }
log.workspace = true
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
