[package]
name = "os_info"
version = "3.7.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Stanislav Tkach <stanislav.tkach@gmail.com>"]
description = "Detect the operating system type and version."
documentation = "https://docs.rs/os_info"
homepage = "https://github.com/stanislav-tkach/os_info"
repository = "https://github.com/stanislav-tkach/os_info"
readme = "README.md"
keywords = ["os", "os_type", "os_version", "os_info"]
categories = ["os"]
license = "MIT"
edition = "2018"
rust-version = "1.60"

[features]
default = ["serde"]

[dependencies]
log = "0.4.5"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["minwindef", "ntdef", "ntstatus", "sysinfoapi", "winnt", "winuser", "libloaderapi", "processthreadsapi", "winerror", "winreg"] }

[dev-dependencies]
pretty_assertions = "1"
doc-comment = "0.3.1"
